Fix upload limit rendering on mobile

--- a/app/javascript/src/styles/views/users/upload_limit/_upload_limit.scss
+++ b/app/javascript/src/styles/views/users/upload_limit/_upload_limit.scss
@@ -19,20 +19,27 @@ body.c-users.a-upload-limit {
   .upload-limit-formula {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     gap: 0.25rem;
 
     font-size: 1rem;
     line-height: 1rem;
     margin-bottom: 1em;
 
-    .upl-element {
+    .upl-group {
       display: flex;
       align-items: center;
-      padding: 0.5rem;
-      gap: 0.5rem;
-      @include st-radius;
+      grid-gap: 0.25rem;
 
-      background: themed("color-foreground");
+      .upl-element {
+        display: flex;
+        align-items: center;
+        padding: 0.5rem;
+        gap: 0.5rem;
+        @include st-radius;
+
+        background: themed("color-foreground");
+      }
     }
   }
 
@@ -47,6 +54,7 @@ body.c-users.a-upload-limit {
 
   .upload-limit-formula abbr, .upload-limit-explanation abbr {
     display: inline-flex;
+    align-items: center;
     justify-content: center;
     min-width: 1rem;
 
